--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -19,10 +20,13 @@
     "@reduxjs/toolkit": "^2.6.0",
     "ag-grid-community": "^33.1.1",
     "ag-grid-react": "^33.1.1",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "firebase": "^11.4.0",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.12.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
