--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "exceljs": "^4.4.0",
     "firebase": "^11.4.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.12.0",
