--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
+    "react-to-print": "^3.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
